Fixed the alignment issues for the desktop page. Need to work on mobile page and javascript validation.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,25 +1,44 @@
 @primary-color: #40ad7a;
 @secondary-color: #efefef;
+@primary-text-color: #ffffff;
+@secondary-text-color: #788291;
+@other-text-color: #000000;
+@button-color: #f25010;
 
-body {
-  margin: 0;
+
+
+html, body {
+  // height: 100%;
+  // width: 100%;
+  // margin: 0;
+  // padding: 0;
+  overflow-x: hidden;
 }
 
 nav {
   background-color: @primary-color;
-  min-height: 25vh;
-  width: 100%;
+  min-height: 150px;
+  width: auto;
   position: static;
-  line-height: 2rem;
+  color: @primary-text-color;
+  padding-left: 50px;
+  h1{
+    padding-top: 20px;
+  }
+  h5 {
+    padding-right: 50px;
+  }
 }
 
 .quote{
   background-color: @secondary-color;
-  min-height: 25vh;
+  min-height: 175px;
   width: 100%;
   position: static;
   line-height: 2rem;
   display: inline-block;
+  color: @secondary-text-color;
+  padding-left: 50px;
 }
 
 #quote-pic {
@@ -39,27 +58,31 @@ nav {
   left: 150px;
   p {
     font-size: 0.8rem;
+    color: @other-text-color;
     #right-quote {
       display: inline-block;
       position: static;
       float: right;
       font-size: 1rem;
+      color: @secondary-text-color;
     }
   }
 }
 
 form {
   position: absolute;
-  background-color: #ffffff;
-  padding: 10px;
+  background-color: @primary-text-color;
+  padding: 20px 15px;
   height: auto;
-  width: 25vw;
-  top: 10vh;
-  right: 5vw;
+  width: 300px;
+  top: 50px;
+  right: 50px;
   border-radius: 5px;
+  color: @secondary-text-color;
   button {
-    background-color: #f25010;
+    background-color: @button-color;
     margin-top: 10px;
+    color: @primary-text-color;
   }
 }
 
@@ -72,6 +95,10 @@ form {
     border: none;
     h3 {
       text-transform: uppercase;
+      color: @other-text-color;
+    }
+    p {
+      color: @secondary-text-color;
     }
     img {
       height: 50px;
@@ -85,29 +112,43 @@ form {
 
 .logos {
   background-color: @secondary-color;
-  min-height: 15vh;
+  min-height: 100%;
   min-width: 100%;
+  padding: 20px 0px 20px 50px;
   img {
     height: 100px;
-    width: 200px;
+    width: 100px;
+    padding: 10px;
   }
 }
 
 footer {
   padding: 0.5rem;
-  a {
-    text-decoration: none;
-    color: #000;
-    &:hover {
+  div{
+    display: inline-block;
+    a {
       text-decoration: none;
       color: #000;
+      &:hover {
+        text-decoration: none;
+        color: #000;
+      }
+
     }
-    // p{
-    //   display: inline-block;
-    //   span{
-    //     float: right;
-    //     text-align: right;
-    //   }
-    // }
+  }
+  .footer-text {
+    font-size: 0.6rem;
+    margin-left: 30px;
+  }
+  .footer-right {
+    float: right;
+    margin-right: 50px;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  form {
+    display: none;
   }
 }
